hphp/test/zend/bad/ext/spl/tests/iterator_066.php
<?php
class myNoRewindIterator extends NoRewindIterator  {}
try {
	$it = new myNoRewindIterator();
} catch (InvalidArgumentException $e) {
	echo 'InvalidArgumentException thrown';
}
?>